2010-07-21  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug where if you attached money and items to a piece of mail it would count all of the money as postage.

2010-07-21  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed the way prices were being calculated as items were being created/destroyed/converted/crafted. see http://www.wowace.com/addons/itemauditor/tickets/7-create-options-for-how-to-distribute-value-when-creating/

2010-07-18  Asa Ayers  <Asa.Ayers@Gmail.com>

- Implemented COD mail (Ticket #1) and updated the way postage was counted so that if you mail multiple items at once, they will all have the postage counted. I also removed the 30c for postage from how QA thresholds are calculated now that they will be counted every time.
- Added a dialog to allow the user to send COD mail without a tracking number.
- Replaced my edit window with a static popup. This looks and behaves better this way.
- Fixed a couple nil related bugs
- Fixed the way prices were being calculated as items were being created/destroyed/converted/crafted

2010-07-18  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added color coding to the minimum price tooltip. If your minimum price is below the current auction price, it wll be green, otherwise it is red.
- Added the ability to change the price of an item. You can click the Total Invested or the Invested Each to change the value. 
- Fixed a bug where sometimes the number owned was not being updated, so you might have 3 of an item but it was calculating as if you only had 1.
- Added the ability to suspend and resume ItemAuditor (Ticket #8). To access this feature use "/ia suspend".

2010-07-17  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug that occurs if you take a flight point and the first thing you kill only has one item. ItemAuditor was incorrectly attaching the cost fo the flight to the cost of that item.

2010-07-16  Asa Ayers  <Asa.Ayers@Gmail.com>
