@@ -1,3 +1,7 @@
+2010-07-22  Asa Ayers  <Asa.Ayers@Gmail.com>
+
+- I Added an option to direct ItemAuditor output to a different chat frame.
+
 2010-07-21  Asa Ayers  <Asa.Ayers@Gmail.com>
 
 - Fixed a bug where if you attached money and items to a piece of mail it would count all of the money as postage.
